# gnucash-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
